# GoQuant-Assignment--Zaid

./: README.md
Test/: CMakeLists.txt  OrderBook.cpp  OrderBook.h  Readme.md  extract_features.py  features_slippage.csv  find_jsonl.py  main.cpp  train_maker_taker_model.py  train_slippage_model.py
Test/benchmarks/: CMakeLists.txt  bench_orderbook.cpp
Test/tests/: CMakeLists.txt  test_orderbook.cpp
